2022-12-04  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/usock.h (USOCK_CHAN_IN_AUTOCMPL): Remove macro.
	(USOCK_CHAN_OUT_DISASM): Likewise.
	(USOCK_CHAN_OUT_PDISAS): New macro.
	(USOCK_CHAN_OUT_CDISAS): Likewise.
	* poked/poked.pk (plet_disasm): Update the CPU disasm channel.

2022-12-04  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.pk (__poked_libpoke_version): New variable.
	(poked_libpoke_version): New function.
	* poked/poked.c (poked_init): Set `__poked_libpoke_version'.

2022-12-04  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (main): Print PDAP version.
	(poked_init): Add new param (`pdap_version').
	Update `__poked_pdap_version' Poke variable.
	* poked/poked.pk (__poked_pdap_version): New variable.
	(poked_pdap_version): New function.

2022-11-29  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* testsuite/lib/poke-pk.exp (tap_execute): Only keep the filename
	and parent directory name for test files to be consistent with
	the rest.

2022-11-27  Arsen Arsenović  <arsen@aarsen.me>

	* bootstrap: Sync with Gnulib.
	* autopull.sh: New file from Gnulib, as a result of sync.
	* autogen.sh: Ditto.
	* bootstrap-funclib.sh: Ditto.
	* bootstrap.conf (bootstrap_print_option_usage_hook): Fix help
	string alignment.
	(bootstrap_post_import_hook): Default JITTER_SRCDIR to Jitter,
	die-guard cd "${JITTER_SRCDIR}" to prevent recursing, move Jitter
	submodule update code...
	(bootstrap_post_pull_hook): ... to this new hook.
	(bootstrap_option_hook): Export JITTER_SRCDIR.
	* gnulib: Update to newest.

2022-11-24  Arsen Arsenović  <arsen@aarsen.me>

	* poke/poke.c (poke_getopt_string): Extract the getopt string, to
	avoid repetition.
	(parse_args_1): Use common poke_getopt_string, assert out on
	unhandled option, and exit on unknown option.
	(parse_args_2): Use common poke_getopt_string, assert out on
	unhandled option.

2022-11-24  Agathe Porte  <floss@microjoe.org>

	* doc/poke.texi: fix sbm image bytes in example.
